# SOAR

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: import_alerts.py  run.py
backend/app/: auth.py  logging_config.py  main.py  models.py  settings.py  storage.py
backend/app/agents/: adaptive_orchestrator.py  analysis_agent.py  base.py  context.py  intelligence_agent.py  langgraph_orchestrator.py  orchestrator.py  playbook_selector.py  response_agent.py  state.py
backend/app/ai/: __init__.py  analyzer.py  attack_data_loader.py  incident_corpus.py  knowledge_base.py  llm_client.py  prompts.py  rag_engine.py  report_generator.py
backend/app/graph/: chain_detector.py  knowledge_graph.py  populator.py  schema.py  temporal_reasoning.py
backend/app/ingestion/: manager.py  suricata_tail.py  (+2 more)
data/: alerts.csv  alerts.json
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.vue  main.js  router.js  style.css
frontend_old/: index.html
tests/: conftest.py  test_adaptive_orchestrator.py  test_agents.py  test_ai.py  test_auth.py  test_chain_detector.py  test_context.py  test_debate.py  test_firewall.py  test_ingestion.py  test_knowledge_graph.py  test_langgraph_orchestrator.py  test_mcp.py  test_memory.py  test_notify_email.py  test_notify_slack.py  test_orchestrator.py  test_playbook_selector.py  test_rag_engine.py  test_recon.py  test_risk_assessor.py  test_routes.py  test_simulator.py  test_threat_intel.py
(+68 files in other folders)
