[project]
name = "soar-agent"
version = "0.1.0"
description = "Agent-Based SOAR Prototype - 基于Agent架构的自动化安全运营系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
ai = [
    "openai>=1.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
